[tool.poetry]
name = "getdata"
version = "0.1.0"
description = "gather data about movies and tv shows"
authors = ["David Martinez Gil <davidmartinezgilp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
motor = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
